add ping endpoint
