# openapi/index.yaml
@@ -55,6 +55,21 @@ paths:
           schema:
             $ref: "#/definitions/ProblemJson"
 
+  "/ping":
+    post:
+      operationId: ping
+      summary: |
+        Ping
+      description: |
+        ping ade service
+      responses:
+        "200":
+            description: OK.
+        "500":
+          description: Service unavailable.
+          schema:
+            $ref: "#/definitions/ProblemJson"
+
 consumes:
   - application/json
 produces:
